add new link urls to project page sidebar

--- a/packages/ui/src/locales/en-US/index.json
+++ b/packages/ui/src/locales/en-US/index.json
@@ -836,8 +836,14 @@
   "project.about.links.issues": {
     "defaultMessage": "Report issues"
   },
+  "project.about.links.site": {
+    "defaultMessage": "Visit website"
+  },
   "project.about.links.source": {
     "defaultMessage": "View source"
+  },
+  "project.about.links.store": {
+    "defaultMessage": "Visit store page"
   },
   "project.about.links.title": {
     "defaultMessage": "Links"
