--- a/packages/ui/src/locales/en-US/index.json
+++ b/packages/ui/src/locales/en-US/index.json
@@ -791,6 +791,12 @@
   "project.about.compatibility.title": {
     "defaultMessage": "Compatibility"
   },
+  "project.about.creators.hosted-title": {
+    "defaultMessage": "Hosted by"
+  },
+  "project.about.creators.organization": {
+    "defaultMessage": "Organization"
+  },
   "project.about.creators.owner": {
     "defaultMessage": "Project owner"
   },
@@ -808,6 +814,9 @@
   },
   "project.about.details.submitted": {
     "defaultMessage": "Submitted {date}"
+  },
+  "project.about.details.title": {
+    "defaultMessage": "Details"
   },
   "project.about.details.updated": {
     "defaultMessage": "Updated {date}"
@@ -922,6 +931,27 @@
   },
   "project.follower-count-tooltip": {
     "defaultMessage": "{count} {count, plural, one {followers} other {followers}}"
+  },
+  "project.license.error": {
+    "defaultMessage": "License text could not be retrieved."
+  },
+  "project.license.loading": {
+    "defaultMessage": "Loading license text..."
+  },
+  "project.license.title": {
+    "defaultMessage": "License"
+  },
+  "project.server.ping.ms": {
+    "defaultMessage": "{ping}ms"
+  },
+  "project.server.ping.testing": {
+    "defaultMessage": "Testing connection"
+  },
+  "project.server.player-count": {
+    "defaultMessage": "{count}"
+  },
+  "project.server.player-count.max": {
+    "defaultMessage": "{count}/{max}"
   },
   "project.settings.analytics.title": {
     "defaultMessage": "Analytics"
