--- a/apps/app-frontend/src/locales/en-US/index.json
+++ b/apps/app-frontend/src/locales/en-US/index.json
@@ -482,6 +482,30 @@
   "instance.settings.tabs.java": {
     "message": "Java and memory"
   },
+  "instance.settings.tabs.java.could-not-determine-java": {
+    "message": "Could not automatically determine a Java installation to use. Please set one below:"
+  },
+  "instance.settings.tabs.java.custom-environment-variables": {
+    "message": "Custom environment variables"
+  },
+  "instance.settings.tabs.java.custom-java-arguments": {
+    "message": "Custom java arguments"
+  },
+  "instance.settings.tabs.java.custom-java-installation": {
+    "message": "Custom Java installation"
+  },
+  "instance.settings.tabs.java.custom-memory-allocation": {
+    "message": "Custom memory allocation"
+  },
+  "instance.settings.tabs.java.default-java-not-found": {
+    "message": "Could not find a default Java {version} installation. Please set one below:"
+  },
+  "instance.settings.tabs.java.enter-environment-variables": {
+    "message": "Enter environmental variables..."
+  },
+  "instance.settings.tabs.java.enter-java-arguments": {
+    "message": "Enter java arguments..."
+  },
   "instance.settings.tabs.java.environment-variables": {
     "message": "Environment variables"
   },
@@ -496,6 +520,9 @@
   },
   "instance.settings.tabs.java.java-memory": {
     "message": "Memory allocated"
+  },
+  "instance.settings.tabs.java.using-default-java": {
+    "message": "Using default Java {version} installation:"
   },
   "instance.settings.tabs.window": {
     "message": "Window"
