--- a/apps/app-frontend/src/locales/en-US/index.json
+++ b/apps/app-frontend/src/locales/en-US/index.json
@@ -486,10 +486,10 @@
     "message": "Custom environment variables"
   },
   "instance.settings.tabs.java.custom-java-arguments": {
-    "message": "Custom java arguments"
+    "message": "Custom Java arguments"
   },
   "instance.settings.tabs.java.custom-java-installation": {
-    "message": "Custom java installation"
+    "message": "Custom Java installation"
   },
   "instance.settings.tabs.java.custom-memory-allocation": {
     "message": "Custom memory allocation"
@@ -498,7 +498,7 @@
     "message": "Enter environmental variables..."
   },
   "instance.settings.tabs.java.enter-java-arguments": {
-    "message": "Enter java arguments..."
+    "message": "Enter Java arguments..."
   },
   "instance.settings.tabs.java.environment-variables": {
     "message": "Environment variables"
