add view contents modal

--- a/packages/ui/src/locales/en-US/index.json
+++ b/packages/ui/src/locales/en-US/index.json
@@ -317,6 +317,42 @@
   "instances.modpack-card.unlink": {
     "defaultMessage": "Unlink modpack"
   },
+  "instances.modpack-content-modal.back-button": {
+    "defaultMessage": "Back"
+  },
+  "instances.modpack-content-modal.copy-link": {
+    "defaultMessage": "Copy link"
+  },
+  "instances.modpack-content-modal.disable": {
+    "defaultMessage": "Disable"
+  },
+  "instances.modpack-content-modal.empty-description": {
+    "defaultMessage": "This modpack does not include any additional content."
+  },
+  "instances.modpack-content-modal.empty-title": {
+    "defaultMessage": "No content found"
+  },
+  "instances.modpack-content-modal.enable": {
+    "defaultMessage": "Enable"
+  },
+  "instances.modpack-content-modal.filter-all": {
+    "defaultMessage": "All"
+  },
+  "instances.modpack-content-modal.header": {
+    "defaultMessage": "Modpack content"
+  },
+  "instances.modpack-content-modal.loading": {
+    "defaultMessage": "Loading content..."
+  },
+  "instances.modpack-content-modal.no-results": {
+    "defaultMessage": "No projects match your search."
+  },
+  "instances.modpack-content-modal.search-placeholder": {
+    "defaultMessage": "Search {count} projects"
+  },
+  "instances.modpack-content-modal.selected-count": {
+    "defaultMessage": "{count} selected"
+  },
   "instances.updater-modal.badge.current": {
     "defaultMessage": "Current"
   },
