fix search in app frontend

--- a/packages/ui/src/locales/en-US/index.json
+++ b/packages/ui/src/locales/en-US/index.json
@@ -1109,6 +1109,9 @@
   "project.settings.notice.no-permission.title": {
     "defaultMessage": "No permission"
   },
+  "project.settings.server.title": {
+    "defaultMessage": "Server"
+  },
   "project.settings.tags.title": {
     "defaultMessage": "Tags"
   },
