fix: use tanstack for loader.vue

--- a/packages/ui/src/locales/en-US/index.json
+++ b/packages/ui/src/locales/en-US/index.json
@@ -422,6 +422,9 @@
   "header.category.resolutions": {
     "defaultMessage": "Resolutions"
   },
+  "hosting.content.failed-to-load-modpack-content": {
+    "defaultMessage": "Failed to load modpack content"
+  },
   "hosting.content.failed-to-remove": {
     "defaultMessage": "Failed to remove content"
   },
