feat: add the mf icons finally

--- a/packages/ui/src/locales/en-US/index.json
+++ b/packages/ui/src/locales/en-US/index.json
@@ -1469,11 +1469,23 @@
   "tag.category.adventure": {
     "defaultMessage": "Adventure"
   },
+  "tag.category.adventure-mode": {
+    "defaultMessage": "Adventure Mode"
+  },
+  "tag.category.anarchy": {
+    "defaultMessage": "Anarchy"
+  },
   "tag.category.atmosphere": {
     "defaultMessage": "Atmosphere"
   },
   "tag.category.audio": {
     "defaultMessage": "Audio"
+  },
+  "tag.category.battle-royale": {
+    "defaultMessage": "Battle Royale"
+  },
+  "tag.category.bedwars": {
+    "defaultMessage": "Bed Wars"
   },
   "tag.category.blocks": {
     "defaultMessage": "Blocks"
@@ -1481,11 +1493,17 @@
   "tag.category.bloom": {
     "defaultMessage": "Bloom"
   },
+  "tag.category.bosses": {
+    "defaultMessage": "Bosses"
+  },
   "tag.category.cartoon": {
     "defaultMessage": "Cartoon"
   },
   "tag.category.challenging": {
     "defaultMessage": "Challenging"
+  },
+  "tag.category.classes": {
+    "defaultMessage": "Classes"
   },
   "tag.category.colored-lighting": {
     "defaultMessage": "Colored Lighting"
@@ -1493,14 +1511,32 @@
   "tag.category.combat": {
     "defaultMessage": "Combat"
   },
+  "tag.category.competitive": {
+    "defaultMessage": "Competitive"
+  },
   "tag.category.core-shaders": {
     "defaultMessage": "Core Shaders"
+  },
+  "tag.category.creative-mode": {
+    "defaultMessage": "Creative Mode"
+  },
+  "tag.category.creator-community": {
+    "defaultMessage": "Creator Community"
+  },
+  "tag.category.crossplay": {
+    "defaultMessage": "Crossplay"
   },
   "tag.category.cursed": {
     "defaultMessage": "Cursed"
   },
+  "tag.category.custom-content": {
+    "defaultMessage": "Custom Content"
+  },
   "tag.category.decoration": {
     "defaultMessage": "Decoration"
+  },
+  "tag.category.dungeons": {
+    "defaultMessage": "Dungeons"
   },
   "tag.category.economy": {
     "defaultMessage": "Economy"
@@ -1513,6 +1549,9 @@
   },
   "tag.category.equipment": {
     "defaultMessage": "Equipment"
+  },
+  "tag.category.factions": {
+    "defaultMessage": "Factions"
   },
   "tag.category.fantasy": {
     "defaultMessage": "Fantasy"
@@ -1529,8 +1568,14 @@
   "tag.category.game-mechanics": {
     "defaultMessage": "Game Mechanics"
   },
+  "tag.category.gens": {
+    "defaultMessage": "Gens"
+  },
   "tag.category.gui": {
     "defaultMessage": "GUI"
+  },
+  "tag.category.hardcore-mode": {
+    "defaultMessage": "Hardcore Mode"
   },
   "tag.category.high": {
     "defaultMessage": "High"
@@ -1538,11 +1583,20 @@
   "tag.category.items": {
     "defaultMessage": "Items"
   },
+  "tag.category.keep-inventory": {
+    "defaultMessage": "Keep Inventory"
+  },
   "tag.category.kitchen-sink": {
     "defaultMessage": "Kitchen Sink"
   },
+  "tag.category.kitpvp": {
+    "defaultMessage": "Kit PVP"
+  },
   "tag.category.library": {
     "defaultMessage": "Library"
+  },
+  "tag.category.lifesteal": {
+    "defaultMessage": "Lifesteal"
   },
   "tag.category.lightweight": {
     "defaultMessage": "Lightweight"
@@ -1559,11 +1613,23 @@
   "tag.category.management": {
     "defaultMessage": "Management"
   },
+  "tag.category.media": {
+    "defaultMessage": "Media"
+  },
   "tag.category.medium": {
     "defaultMessage": "Medium"
   },
+  "tag.category.microgames": {
+    "defaultMessage": "Microgames"
+  },
   "tag.category.minigame": {
     "defaultMessage": "Minigame"
+  },
+  "tag.category.minigames": {
+    "defaultMessage": "Minigames"
+  },
+  "tag.category.mmo": {
+    "defaultMessage": "MMO"
   },
   "tag.category.mobs": {
     "defaultMessage": "Mobs"
@@ -1577,8 +1643,23 @@
   "tag.category.multiplayer": {
     "defaultMessage": "Multiplayer"
   },
+  "tag.category.network": {
+    "defaultMessage": "Network"
+  },
+  "tag.category.offline-mode": {
+    "defaultMessage": "Offline Mode"
+  },
+  "tag.category.oneblock": {
+    "defaultMessage": "One Block"
+  },
+  "tag.category.op": {
+    "defaultMessage": "OP"
+  },
   "tag.category.optimization": {
     "defaultMessage": "Optimization"
+  },
+  "tag.category.parkour": {
+    "defaultMessage": "Parkour"
   },
   "tag.category.path-tracing": {
     "defaultMessage": "Path Tracing"
@@ -1586,17 +1667,50 @@
   "tag.category.pbr": {
     "defaultMessage": "PBR"
   },
+  "tag.category.personal-worlds": {
+    "defaultMessage": "Personal Worlds"
+  },
+  "tag.category.plots": {
+    "defaultMessage": "Plots"
+  },
+  "tag.category.pokemon": {
+    "defaultMessage": "Pokemon"
+  },
   "tag.category.potato": {
     "defaultMessage": "Potato"
+  },
+  "tag.category.prison": {
+    "defaultMessage": "Prison"
+  },
+  "tag.category.pve": {
+    "defaultMessage": "PVE"
+  },
+  "tag.category.pvp": {
+    "defaultMessage": "PVP"
+  },
+  "tag.category.questing": {
+    "defaultMessage": "Questing"
   },
   "tag.category.quests": {
     "defaultMessage": "Quests"
   },
+  "tag.category.racing": {
+    "defaultMessage": "Racing"
+  },
   "tag.category.realistic": {
     "defaultMessage": "Realistic"
   },
+  "tag.category.recording-smp": {
+    "defaultMessage": "Recording SMP"
+  },
   "tag.category.reflections": {
     "defaultMessage": "Reflections"
+  },
+  "tag.category.roleplay": {
+    "defaultMessage": "Roleplay"
+  },
+  "tag.category.rpg": {
+    "defaultMessage": "RPG"
   },
   "tag.category.screenshot": {
     "defaultMessage": "Screenshot"
@@ -1610,17 +1724,35 @@
   "tag.category.simplistic": {
     "defaultMessage": "Simplistic"
   },
+  "tag.category.skyblock": {
+    "defaultMessage": "Skyblock"
+  },
+  "tag.category.smp": {
+    "defaultMessage": "SMP"
+  },
   "tag.category.social": {
     "defaultMessage": "Social"
   },
   "tag.category.storage": {
     "defaultMessage": "Storage"
   },
+  "tag.category.survival-mode": {
+    "defaultMessage": "Survival Mode"
+  },
+  "tag.category.teams": {
+    "defaultMessage": "Teams"
+  },
+  "tag.category.technical": {
+    "defaultMessage": "Technical"
+  },
   "tag.category.technology": {
     "defaultMessage": "Technology"
   },
   "tag.category.themed": {
     "defaultMessage": "Themed"
+  },
+  "tag.category.towns": {
+    "defaultMessage": "Towns"
   },
   "tag.category.transportation": {
     "defaultMessage": "Transportation"
@@ -1633,6 +1765,12 @@
   },
   "tag.category.vanilla-like": {
     "defaultMessage": "Vanilla Like"
+  },
+  "tag.category.whitelisted": {
+    "defaultMessage": "Whitelisted"
+  },
+  "tag.category.world-resets": {
+    "defaultMessage": "World Resets"
   },
   "tag.category.worldgen": {
     "defaultMessage": "World Generation"
