--- a/apps/app-frontend/src/locales/en-US/index.json
+++ b/apps/app-frontend/src/locales/en-US/index.json
@@ -398,29 +398,35 @@
   "instance.settings.tabs.installation": {
     "message": "Installation"
   },
-  "instance.settings.tabs.installation.change-version.already-installed.modded": {
-    "message": "{platform} {version} for Minecraft {game_version} already installed"
+  "instance.settings.tabs.installation.cancel.button": {
+    "message": "Cancel"
   },
-  "instance.settings.tabs.installation.change-version.already-installed.vanilla": {
-    "message": "Vanilla {game_version} already installed"
+  "instance.settings.tabs.installation.change-version.button": {
+    "message": "Change version"
   },
-  "instance.settings.tabs.installation.change-version.button.install": {
-    "message": "Install"
+  "instance.settings.tabs.installation.edit.button": {
+    "message": "Edit"
   },
-  "instance.settings.tabs.installation.change-version.button.installing": {
-    "message": "Installing"
+  "instance.settings.tabs.installation.edit.warning": {
+    "message": "We don't recommend editing your installation settings after installing content. If you want to edit them, be cautious as it may cause issues."
   },
   "instance.settings.tabs.installation.game-version": {
     "message": "Game version"
   },
-  "instance.settings.tabs.installation.install.in-progress": {
-    "message": "Installation in progress"
+  "instance.settings.tabs.installation.hide-snapshots": {
+    "message": "Hide snapshots"
+  },
+  "instance.settings.tabs.installation.info.title": {
+    "message": "Installation info"
+  },
+  "instance.settings.tabs.installation.installed-modpack.title": {
+    "message": "Installed modpack"
+  },
+  "instance.settings.tabs.installation.linked-instance.title": {
+    "message": "Linked instance"
   },
   "instance.settings.tabs.installation.loader-version": {
     "message": "{loader} version"
-  },
-  "instance.settings.tabs.installation.no-loader-versions": {
-    "message": "{loader} is not available for Minecraft {version}. Try another mod loader."
   },
   "instance.settings.tabs.installation.platform": {
     "message": "Platform"
@@ -431,23 +437,17 @@
   "instance.settings.tabs.installation.reinstall.button.reinstalling": {
     "message": "Reinstalling modpack"
   },
-  "instance.settings.tabs.installation.reinstall.confirm.description": {
-    "message": "Reinstalling will reset all installed or modified content to what is provided by the modpack, removing any mods or content you have added on top of the original installation. This may fix unexpected behavior if changes have been made to the instance, but if your worlds now depend on additional installed content, it may break existing worlds."
+  "instance.settings.tabs.installation.reinstall.description": {
+    "message": "Re-installing the modpack resets the instance's content to its original state, removing any mods or content you have added."
   },
-  "instance.settings.tabs.installation.reinstall.confirm.title": {
-    "message": "Are you sure you want to reinstall this instance?"
+  "instance.settings.tabs.installation.reinstall.title": {
+    "message": "Re-install modpack"
   },
   "instance.settings.tabs.installation.repair.button": {
     "message": "Repair"
   },
   "instance.settings.tabs.installation.repair.button.repairing": {
     "message": "Repairing"
-  },
-  "instance.settings.tabs.installation.repair.confirm.description": {
-    "message": "Repairing reinstalls Minecraft dependencies and checks for corruption. This may resolve issues if your game is not launching due to launcher-related errors, but will not resolve issues or crashes related to installed mods."
-  },
-  "instance.settings.tabs.installation.repair.confirm.title": {
-    "message": "Repair instance?"
   },
   "instance.settings.tabs.installation.repair.description": {
     "message": "Reinstalls Minecraft dependencies and checks for corruption. This may resolve issues if your game is not launching due to launcher-related errors."
@@ -458,11 +458,14 @@
   "instance.settings.tabs.installation.repair.title": {
     "message": "Repair instance"
   },
-  "instance.settings.tabs.installation.reset-selections": {
-    "message": "Reset to current"
+  "instance.settings.tabs.installation.save.button": {
+    "message": "Save"
   },
-  "instance.settings.tabs.installation.tooltip.action.install": {
-    "message": "install"
+  "instance.settings.tabs.installation.saving.button": {
+    "message": "Saving..."
+  },
+  "instance.settings.tabs.installation.show-all-versions": {
+    "message": "Show all versions"
   },
   "instance.settings.tabs.installation.tooltip.action.reinstall": {
     "message": "reinstall"
@@ -478,6 +481,12 @@
   },
   "instance.settings.tabs.installation.tooltip.cannot-while-repairing": {
     "message": "Cannot {action} while repairing"
+  },
+  "instance.settings.tabs.installation.unlink.button": {
+    "message": "Unlink modpack"
+  },
+  "instance.settings.tabs.installation.unlink.description": {
+    "message": "Unlinking permanently disconnects this instance from the modpack project, allowing you to change the loader and Minecraft version, but you won't receive future updates."
   },
   "instance.settings.tabs.java": {
     "message": "Java and memory"
